# omakure

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install-from-source.sh  install.ps1  install.sh  mise.toml  plan.md
.docs/: architecture.md  environments.md  how-it-works.md  how-to-create-a-script.md  requirements.md  usage.md
.docs/templates/: contributing_template.md  plan_template.md  summary_template.md  user_story_template.md
.github/workflows/: auto-release.yml  ci.yml  release.yml
.workflow/: README.md
release-notes/: v0.1.0.md  v0.1.2.md  v0.1.7.md
scripts/: omakure.toml
scripts/.history/: 1767220363888-131278-azure_rg_details_bash.json
scripts/.omaken/azure/: rg-details.bash  rg-list-all.bash
scripts/azure/: index.lua  rg-delete.bash  rg-details.bash  rg-list-all.bash
src/: completion.rs  config.rs  doctor.rs  history.rs  init.rs  installer.rs  list.rs  lua_widget.rs  main.rs  omaken.rs  run.rs  runtime.rs  search_index.rs  uninstall.rs  update.rs  util.rs  workspace.rs
src/adapters/: environments.rs  mod.rs  omarchy.rs  script_runner.rs  system_checks.rs  workspace_repository.rs
src/adapters/tui/: app.rs  events.rs  mod.rs  theme.rs  ui.rs
src/adapters/tui/widgets/: environment.rs  envs.rs  error.rs  field_input.rs  history.rs  loading.rs  mod.rs  run_result.rs  running.rs  schema.rs  scripts.rs  search.rs
src/cli/: args.rs  init.rs  theme.rs  uninstall.rs
src/domain/: mod.rs  parsing.rs
src/ports/: mod.rs
src/use_cases/: mod.rs
