[package]
name = "omakure"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omakure"
path = "src/main.rs"

[[bin]]
name = "omakure-installer"
path = "src/installer.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
