[package]
name = "omakure"
version = "0.1.7"
repository = "https://github.com/This-Is-NPC/omakure"
license = "AGPL-3.0-only"
edition = "2021"

[[bin]]
name = "omakure"
path = "src/main.rs"

[[bin]]
name = "omakure-installer"
path = "src/installer.rs"

[dependencies]
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
toml = "0.8"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
